@@ -1,9 +1,10 @@
 # Reference
+
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
 ## Table of Contents
 
-**Functions**
+### Functions
 
 * [`simpkv::delete`](#simpkvdelete): Deletes a `key` from the configured backend.
 * [`simpkv::deletetree`](#simpkvdeletetree): Deletes a whole folder from the configured backend.
@@ -18,7 +19,7 @@
 
 ## Functions
 
-### simpkv::delete
+### <a name="simpkvdelete"></a>`simpkv::delete`
 
 Type: Ruby 4.x API
 
@@ -47,6 +48,7 @@ backend operation fails and 'softfail' is `true` in the merged backend
 options
 
 Raises:
+
 * `ArgumentError` If the key or merged backend config is invalid
 * `LoadError` If the simpkv adapter cannot be loaded
 * `RuntimeError` If the backend operation fails, unless 'softfail' is `true` in the merged backend options.
@@ -74,7 +76,6 @@ The key to remove. Must conform to the following:
 * Key must contain only the following characters:
 
   * a-z
-  * A-Z
   * 0-9
   * The following special characters: `._:-/`
 
@@ -136,7 +137,7 @@ configuration to use via fuzzy name matching, in the absence of the
     failed.
   * Defaults to `false`.
 
-### simpkv::deletetree
+### <a name="simpkvdeletetree"></a>`simpkv::deletetree`
 
 Type: Ruby 4.x API
 
@@ -165,6 +166,7 @@ backend operation fails and 'softfail' is `true` in the merged backend
 options
 
 Raises:
+
 * `ArgumentError` If the key folder or merged backend config is invalid
 * `LoadError` If the simpkv adapter cannot be loaded
 * `RuntimeError` If the backend operation fails, unless 'softfail' is `true` in the merged backend options.
@@ -192,7 +194,6 @@ The key folder to remove. Must conform to the following:
 * Key folder must contain only the following characters:
 
   * a-z
-  * A-Z
   * 0-9
   * The following special characters: `._:-/`
 
@@ -254,7 +255,7 @@ configuration to use via fuzzy name matching, in the absence of the
     failed.
   * Defaults to `false`.
 
-### simpkv::exists
+### <a name="simpkvexists"></a>`simpkv::exists`
 
 Type: Ruby 4.x API
 
@@ -295,6 +296,7 @@ Returns: `Enum[Boolean,Undef]` If the backend operation succeeds, returns
 in the merged backend options, returns nil
 
 Raises:
+
 * `ArgumentError` If the key or merged backend config is invalid
 * `LoadError` If the simpkv adapter cannot be loaded
 * `RuntimeError` If the backend operation fails, unless 'softfail' is `true` in the merged backend options.
@@ -334,7 +336,6 @@ The key or key folder to check. Must conform to the following:
 * Key must contain only the following characters:
 
   * a-z
-  * A-Z
   * 0-9
   * The following special characters: `._:-/`
 
@@ -396,7 +397,7 @@ configuration to use via fuzzy name matching, in the absence of the
     failed.
   * Defaults to `false`.
 
-### simpkv::get
+### <a name="simpkvget"></a>`simpkv::get`
 
 Type: Ruby 4.x API
 
@@ -437,6 +438,7 @@ in the merged backend options
   the key
 
 Raises:
+
 * `ArgumentError` If the key or merged backend config is invalid
 * `LoadError` If the simpkv adapter cannot be loaded
 * `RuntimeError` If the backend operation fails, unless 'softfail' is `true` in the merged backend options.
@@ -470,7 +472,6 @@ The key to retrieve. Must conform to the following:
 * Key must contain only the following characters:
 
   * a-z
-  * A-Z
   * 0-9
   * The following special characters: `._:-/`
 
@@ -532,7 +533,7 @@ configuration to use via fuzzy name matching, in the absence of the
     failed.
   * Defaults to `false`.
 
-### simpkv::list
+### <a name="simpkvlist"></a>`simpkv::list`
 
 Type: Ruby 4.x API
 
@@ -602,6 +603,7 @@ sub-folders upon success; Undef when the backend operation fails and
 * 'folders' attribute is an Array of sub-folder names
 
 Raises:
+
 * `ArgumentError` If the key folder or merged backend config is invalid
 * `LoadError` If the simpkv adapter cannot be loaded
 * `RuntimeError` If the backend operation fails, unless 'softfail' is `true` in the merged backend options.
@@ -658,7 +660,6 @@ The key folder to list. Must conform to the following:
 * Key folder must contain only the following characters:
 
   * a-z
-  * A-Z
   * 0-9
   * The following special characters: `._:-/`
 
@@ -720,7 +721,7 @@ configuration to use via fuzzy name matching, in the absence of the
     failed.
   * Defaults to `false`.
 
-### simpkv::put
+### <a name="simpkvput"></a>`simpkv::put`
 
 Type: Ruby 4.x API
 
@@ -760,6 +761,7 @@ backend operation fails and 'softfail' is `true` in the merged backend
 options
 
 Raises:
+
 * `ArgumentError` If the key or merged backend config is invalid
 * `LoadError` If the simpkv adapter cannot be loaded
 * `RuntimeError` If the backend operation fails, unless 'softfail' is `true` in the merged backend options.
@@ -796,7 +798,6 @@ The key to set. Must conform to the following:
 * Key must contain only the following characters:
 
   * a-z
-  * A-Z
   * 0-9
   * The following special characters: `._:-/`
 
@@ -870,7 +871,7 @@ configuration to use via fuzzy name matching, in the absence of the
     failed.
   * Defaults to `false`.
 
-### simpkv::support::config::merge
+### <a name="simpkvsupportconfigmerge"></a>`simpkv::support::config::merge`
 
 Type: Ruby 4.x API
 
@@ -936,6 +937,7 @@ Returns: `Hash` merged simpkv options that will have the backend to use
 specified by 'backend'
 
 Raises:
+
 * `ArgumentError` if merged configuration fails validation
 
 ##### `options`
@@ -952,7 +954,7 @@ Data type: `Array`
 List of backends for which plugins have been successfully
 loaded.
 
-### simpkv::support::config::validate
+### <a name="simpkvsupportconfigvalidate"></a>`simpkv::support::config::validate`
 
 Type: Ruby 4.x API
 
@@ -965,6 +967,7 @@ Validate backend configuration
 Returns: `Nil`
 
 Raises:
+
 * `ArgumentError` if a backend has not been specified, appropriate configuration for a specified backend cannot be found, or different backend configurations are provided for the same ['type', 'id'] pair.
 
 ##### `options`
@@ -980,7 +983,7 @@ Data type: `Array`
 List of backends for which plugins have been successfully
 loaded.
 
-### simpkv::support::key::validate
+### <a name="simpkvsupportkeyvalidate"></a>`simpkv::support::key::validate`
 
 Type: Ruby 4.x API
 
@@ -991,7 +994,6 @@ Validates key conforms to the simpkv key specification
   * Key must contain only the following characters:
 
     * a-z
-    * A-Z
     * 0-9
     * The following special characters: `._:-/`
 
@@ -1012,6 +1014,7 @@ simpkv::support::key::validate('simp-simp_snmpd:password.auth')
 ##### Failing
 
 ```puppet
+simpkv::support::key::validate('Uppercase/Characters/NOT/Allowed')
 simpkv::support::key::validate('${special}/chars/not/allowed!'}
 simpkv::support::key::validate('looks/like/an/./unexpanded/linux/path')
 simpkv::support::key::validate('looks/like/another/../unexpanded/linux/path')
@@ -1026,7 +1029,6 @@ Validates key conforms to the simpkv key specification
   * Key must contain only the following characters:
 
     * a-z
-    * A-Z
     * 0-9
     * The following special characters: `._:-/`
 
@@ -1037,6 +1039,7 @@ Validates key conforms to the simpkv key specification
 Returns: `Nil`
 
 Raises:
+
 * `ArgumentError` if validation fails
 
 ##### Examples
@@ -1052,6 +1055,7 @@ simpkv::support::key::validate('simp-simp_snmpd:password.auth')
 ###### Failing
 
 ```puppet
+simpkv::support::key::validate('Uppercase/Characters/NOT/Allowed')
 simpkv::support::key::validate('${special}/chars/not/allowed!'}
 simpkv::support::key::validate('looks/like/an/./unexpanded/linux/path')
 simpkv::support::key::validate('looks/like/another/../unexpanded/linux/path')
@@ -1063,7 +1067,7 @@ Data type: `String[1]`
 
 simpkv key
 
-### simpkv::support::load
+### <a name="simpkvsupportload"></a>`simpkv::support::load`
 
 Type: Ruby 4.x API
 
@@ -1078,5 +1082,6 @@ instance, if it is not present
 Returns: `Nil`
 
 Raises:
+
 * `LoadError` if simpkv adapter software fails to load
 
